Fixes Spacing Issues

--- a/css/main.css
+++ b/css/main.css
@@ -11,16 +11,16 @@ img {
 h1, h2 {
   color: #5d8432;
   text-transform: uppercase;
-  font-family: 'Open Sans Condensed', sans-serif;
+  font-family: 'Patua One', cursive;
 }
 
 figcaption {
-  font-size: 1rem;
+  font-size: .8rem;
   font-style:italic;
   text-align: center;
 }
 .figclass {
-  font-size: 1.5rem;
+  font-size: 1rem;
 }
 
 nav {
@@ -31,13 +31,13 @@ nav {
 a {
   text-decoration:none;
   color: #793284;
-  font-family: 'Open Sans Condensed', sans-serif;
+  font-family: 'Patua One', cursive;
 }
 a:hover {
   color: #b42885;
   text-decoration:underline;
 }
 
-ul {
+ol {
   list-style-type: none;
 }
